# scraiper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scraper/: __init__.py
tests/: test_scraper.py  test_webscraping.py
webscraping/: __init__.py  webscraping.py
