[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webscraping"
version = "0.0.1"
authors = [
    { name="kenno warise"},
]
description = "A small web scraping package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies =  [
    "bs4 == 0.0.1",
    "requests >= 2.28.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "coverage == 7.2.2",
]

[project.urls]
"Homepage" = "https://github.com/kenno-warise/webscraping"
"Bug Tracker" = "https://github.com/kenno-warise/webscraping/issues"
